--- a/skills/okta/index.html
+++ b/skills/okta/index.html
@@ -246,7 +246,7 @@ if (!doNotTrack) {
                 
                   Project management applications are either expensive or time-consuming to configure and customize for your team (I&rsquo;m looking at you spreadsheets!). In a team environment, using spreadsheets or other offline files can be tricky for access with multiple users opening and saving the same file, resulting in &ldquo;conflicted file&rdquo; errors.
 To solve this problem, I developed a secure web application to track course development projects for agile and waterfall-based projects.
-The application uses C# .
+The application was developed using C# .
                   <a href="https://rickyharor.com/post/1/" class="post-read-more">[Read More]</a>
                 
               </div>
